# personal-training

./: .dockerignore  .gitlab-ci.yml  README.md  docker-compose.yaml  install_polars.sh  pyproject.toml  requirements.txt
airflow/: Dockerfile  install_polars.sh  requirements.txt
airflow/dags/: dag-adhoc.py  dag-adhoc_flight.py  dag-adhoc_weather.py  flightdata_extraction.py  training_model.py  try_cleaning.py  weatherdata_extraction.py
api-prod/: Dockerfile  main.py  services.py
extract_data/: flight_data.py  get_datas.py  weather_data.py
flight_data/: flight_data.py  get_datas.py  weather_data.py
reference_data/: airports_references.parquet  get_Lufthansa_refs.py  study_airport.json
src/api_tools/: exception.py
src/extract_data/: flight_data.py  get_datas.py
src/reference_data/: get_Lufthansa_refs.py  study_airport.json
src/tools/: XGBoost_GridSearch.py  data_cleaning.py
tools/: XGBoost_GridSearch.py  data_cleaning.py
