[tool.poetry]
name = "mon-projet-global"
version = "0.1.0"
package-mode = true
packages = [{include = "*", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
requests = "2.32.2"

pandas = "*"
pyarrow = "*"
scikit-learn = "*"
xgboost = "*"
joblib = "*"
requests-cache = "*"
retry-requests = "*"
openmeteo-requests = "*"

apache-airflow = { version = "3.2.0", optional = true }
apache-airflow-task-sdk = { version = "1.2.0", optional = true }
apache-airflow-providers-fab = { version = ">=1.5.0", optional = true }
airflow-serde-polars = { git = "https://github.com/phi-friday/airflow-serde-polars.git", branch = "main", optional = true }
urllib3 = { version = "<2.0.0", optional = true }

[tool.poetry.extras]
airflow = ["apache-airflow", "apache-airflow-task-sdk", "apache-airflow-providers-fab", "airflow-serde-polars", "urllib3"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"